Sign using common action and upload artifact (#123)
* test build sign

* test build and sign

* secrets not env

* read contents

* do not configure aws

* remove permissions

* remove sign and build

* test credential check + sign

* 2.6.9 version

* define the role

* change role

* policy permission

* switch roles

* Production

* test sign + upload job

* sign and build path

* region input

* secrets

* test upload only

* file path

* cache version

* null output for STM Setup

* test release build

* test draft release

* remove old config file

* action formatting

* header api formatting

* clean up

* move sign steps to release workflow

* remove duplicated SSM code

* revert module version changes used in testing

* revert module changelog

* admu version in subtask workflow

* release job with admu version

* test ci with admu release job

* version 2.6.9 for testing

* changelog version

* psd1 location

* remove job from CI

* Revert "changelog version"

This reverts commit 8212da27090e42e313560a8cd754367283b5d4ba.

* Revert "version 2.6.9 for testing"

This reverts commit 88376ea883901ed8ccf49ebb050b2583b68976a7.

--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -1,8 +1,4 @@
 name: ADMU Module CI
-
-# env:
-# define env vars
-
 on:
   pull_request:
     branches:
@@ -69,7 +65,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup PowerShell Module Cache
         id: cacher
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: 'C:\Users\runneradmin\Documents\PowerShell\Modules\'
           key: PS-Dependancies
@@ -113,10 +109,11 @@ jobs:
   Build-Module:
     needs: ["Setup-Build-Dependancies", "Check-PR-Labels"]
     runs-on: windows-latest
+    environment: Production
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: 'C:\Users\runneradmin\Documents\PowerShell\Modules\'
           key: PS-Dependancies
@@ -151,7 +148,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: jumpcloud-admu-build
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           path: 'C:\Users\runneradmin\Documents\PowerShell\Modules\'
           key: PS-Dependancies
