--- a/.github/workflows/admu-release.yml
+++ b/.github/workflows/admu-release.yml
@@ -168,11 +168,13 @@ jobs:
           SM_HOST: ${{ secrets.SM_HOST }}
           region: ${{ secrets.AWS_REGION }}
           version: ${{ env.RELEASE_VERSION }}
-      - name: Upload Release Artifacts
-        uses: ./github/actions/upload-secure-artifact
-        with:
-          name: jumpcloud-admu
-          path: ${{ github.workspace }}/Jumpcloud-ADMU/Exe/*.exe ${{ github.workspace }}/Jumpcloud-ADMU/JumpCloud.ADMU.nuspec ${{ github.workspace }}/JumpCloud.ADMU.*.nupkg
+      - run: pwd
+        shell: bash
+      # - name: Upload Release Artifacts
+      #   uses: D:/a/jumpcloud-ADMU/jumpcloud-ADMU/github/actions/upload-secure-artifact
+      #   with:
+      #     name: jumpcloud-admu
+      #     path: ${{ github.workspace }}/Jumpcloud-ADMU/Exe/*.exe ${{ github.workspace }}/Jumpcloud-ADMU/JumpCloud.ADMU.nuspec ${{ github.workspace }}/JumpCloud.ADMU.*.nupkg
   Draft-GH-Release:
     needs: [Build-Sign-ADMU]
     runs-on: ubuntu-latest
