remove start-jcadmu.ps1 file

--- a/.github/workflows/admu-release.yml
+++ b/.github/workflows/admu-release.yml
@@ -121,13 +121,10 @@ jobs:
       - name: Pack nuspec
         shell: pwsh
         run: |
-          # set psm1 to point to public/start-migration
-          $psm1Path = "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.psm1"
-          $psm1Content = Get-Content -path $psm1Path
-          $psm1Content = $psm1Content -replace "\\Powershell\\", "\Public\"
-          Set-Content -Value $psm1Content -Path $psm1Path -Force
           # Pack
-          nuget pack "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.nuspec"
+          # NU5111 - ignore unrecognized ps1 files not named install/ uninstall or init
+          # NU5110 - ignore files outside tools folder
+          nuget pack "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.nuspec" -Properties NoWarn=NU5111,NU5110
       - name: Validate NuPkg File
         shell: pwsh
         run: |
