--- a/.github/workflows/admu-release.yml
+++ b/.github/workflows/admu-release.yml
@@ -54,7 +54,7 @@ jobs:
           }
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  Setup-Build-Dependancies:
+  Setup-Build-Dependencies:
     needs: ["Filter-Branch", "Check-PR-Labels"]
     runs-on: windows-latest
     timeout-minutes: 10
@@ -65,7 +65,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: 'C:\Users\runneradmin\Documents\PowerShell\Modules\'
-          key: PS-Dependancies
+          key: PS-Dependencies
       - name: Install dependencies
         if: steps.cacher.outputs.cache-hit != 'true'
         shell: pwsh
@@ -76,7 +76,7 @@ jobs:
               Write-Host ('[status]Installing package provider NuGet');
               Install-PackageProvider -Name:('NuGet') -Scope:('CurrentUser') -Force
           }
-          # define dependancies for this ci workflow:
+          # define dependencies for this ci workflow:
           $PSDependencies = @{
               'PowerShellGet'                         = @{Repository = 'PSGallery'; RequiredVersion = '3.0.12-beta' }
               'ps2exe'                                = @{Repository = 'PSGallery'; RequiredVersion = '1.0.13' }
@@ -104,14 +104,14 @@ jobs:
           }
   Build-Sign-ADMU:
     runs-on: windows-latest
-    needs: ["Setup-Build-Dependancies", "Check-PR-Labels"]
+    needs: ["Setup-Build-Dependencies", "Check-PR-Labels"]
     environment: Production
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
         with:
           path: "/home/runner/.local/share/powershell/Modules/"
-          key: PS-Dependancies
+          key: PS-Dependencies
       - name: Build ADMU Module
         shell: powershell
         env:
@@ -121,13 +121,10 @@ jobs:
       - name: Pack nuspec
         shell: pwsh
         run: |
-          # set psm1 to point to public/start-migartion
-          $psm1Path = "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.psm1"
-          $psm1Content = Get-Content -path $psm1Path
-          $psm1Content = $psm1Content -replace "\\Powershell\\", "\Public\"
-          Set-Content -Value $psm1Content -Path $psm1Path -Force
           # Pack
-          nuget pack "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.nuspec"
+          # NU5111 - ignore unrecognized ps1 files not named install/ uninstall or init
+          # NU5110 - ignore files outside tools folder
+          nuget pack "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.nuspec" -Properties NoWarn=NU5111,NU5110
       - name: Validate NuPkg File
         shell: pwsh
         run: |
@@ -169,7 +166,7 @@ jobs:
           region: ${{ secrets.AWS_REGION }}
           version: ${{ env.RELEASE_VERSION }}
       - name: Upload Release Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: jumpcloud-admu
           path: |
@@ -182,7 +179,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Download ADMU artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: jumpcloud-admu
       - name: Build Draft Release
@@ -211,7 +208,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download ADMU artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: jumpcloud-admu
       - name: Publish
