--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -133,6 +133,7 @@ jobs:
             ${{ github.workspace }}/Jumpcloud-ADMU/PowerShell/Public/**/*.ps1
             ${{ github.workspace }}/Jumpcloud-ADMU/JumpCloud.ADMU.psd1
             ${{ github.workspace }}/Jumpcloud-ADMU/JumpCloud.ADMU.psm1
+            ${{ github.workspace }}/Jumpcloud-ADMU/Exe/*.exe
           retention-days: 1
   Test-Module:
     needs: ["Setup-Build-Dependencies", "Check-PR-Labels", "Build-Module"]
