--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -149,6 +149,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: jumpcloud-admu-build
+      - name: Display structure of downloaded files
+        run: ls -R
       - uses: actions/cache@v4
         with:
           path: 'C:\Users\runneradmin\Documents\PowerShell\Modules\'
