Break up private functions & search menu bugfix (re-release) (#154)
* Break up private functions & search menu bugfix (#152)

* copied functions into new directory

* Move Start Migration

* remove functions from start-migration

* move form

* Changes for Form

* move progress form

* process by owner changes

* progress forms changes

* Assets file for forms

* Get-ImageFromB64

* Function Names

* rename Build-Exe

* 2.7.11 version + build module functions

* change patch for new-admuTemplate

* pester tests

* CI changes for functions location

* functions tests

* update several variable names in test /ci

* paths for tests

* update Build tests

* Update VS Settings

* paths for tests

* Get-SID replace

* migration tests paths

* migration tests paths

* remove start-jcadmu.ps1 file

* escape $pid

* write out log content

* skip tests and validate log location in build runner

* not tail log lines

* Write-ToLog shouldn't terminate when writing an error

* order in error messages

* skip functions tests + why are we using silentlyContinue?

* can't skip functions tests

* write-error should be write-warnings until final throw message

* tail and validate local users

* version of artifact action

* add param to build [skip ci]

* write out additional debugging

* CUT-4541 - reinstall search/ start appx for all devices (not just windows 10)

* fixed migration tests by importing the module instead of calling start migration (which no longer contains any private functions)

* variable names and logging changes

* set systemKey in migration tests

* Variable names

* form elements, update to xaml form for MTP selection

* manual tests for uwp + selection form

* mtp selection form background + size

* form changes for selecting another MTP org, manual tests

* Form changes, test-button function updated to test various cases in helper functions

* automate tests for selection form Test-MigrationButton

* test the selection form in ci

* mock names

* Only show op

--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -133,6 +133,7 @@ jobs:
             ${{ github.workspace }}/Jumpcloud-ADMU/PowerShell/Public/**/*.ps1
             ${{ github.workspace }}/Jumpcloud-ADMU/JumpCloud.ADMU.psd1
             ${{ github.workspace }}/Jumpcloud-ADMU/JumpCloud.ADMU.psm1
+            ${{ github.workspace }}/Jumpcloud-ADMU/Exe/*.exe
           retention-days: 1
   Test-Module:
     needs: ["Setup-Build-Dependencies", "Check-PR-Labels", "Build-Module"]
@@ -148,6 +149,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: jumpcloud-admu-build
+      - name: Display structure of downloaded files
+        run: ls -R
       - uses: actions/cache@v4
         with:
           path: 'C:\Users\runneradmin\Documents\PowerShell\Modules\'
