--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -149,7 +149,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: jumpcloud-admu-build
-          path: $GITHUB_WORKSPACE\jumpcloud-ADMU
+          path: jumpcloud-ADMU
       - name: Display structure of downloaded files
         run: ls -R
       - uses: actions/cache@v4
