--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -124,7 +124,7 @@ jobs:
       - name: Upload Nuspec
         uses: actions/upload-artifact@v4
         with:
-          name: jumpcloud-admu-build
+          name: jumpcloud-admu-build-${{ github.sha }}
           path: |
             ${{ github.workspace }}/Jumpcloud-ADMU/JumpCloud.ADMU.nuspec
             ${{ github.workspace }}/Jumpcloud-ADMU/Docs/*.md
@@ -148,7 +148,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: jumpcloud-admu-build
+          name: jumpcloud-admu-build-${{ github.sha }}
       - name: Display structure of downloaded files
         run: ls -R
       - uses: actions/cache@v4
