--- a/.github/workflows/admu-release.yml
+++ b/.github/workflows/admu-release.yml
@@ -5,9 +5,6 @@ on:
       - closed
     branches:
       - master
-permissions:
-  contents: write
-  id-token: write
 jobs:
   Check-If-Merged:
     if: github.event.pull_request.merged == true
@@ -15,7 +12,6 @@ jobs:
     steps:
       - name: Check if Merged
         run: echo {GITHUB_HEAD_REF} merged into master
-
   Filter-Branch:
     runs-on: ubuntu-latest
     if: contains(github.event.pull_request.labels.*.name, 'ADMU')
@@ -137,40 +133,11 @@ jobs:
           $moduleRootDirectories = Get-ChildItem -Directory -Path:("$NupkgPathDirectory/nupkg_module")
           Write-Host "Module Files:\n$moduleRootFiles"
           Write-Host "Module Directories:\n$moduleRootDirectories"
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: ${{ secrets.AWS_REGION }}
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_NUMBER }}:role/${{ secrets.AWS_ROLE_NAME }}
-          role-session-name: GHA_ADMU_SIGN_EXE
-      - name: Set ADMU ENV VERSION
-        id: admu-version
-        shell: pwsh
-        run: |
-          $content = Get-Content -Path "${{ github.workspace }}/jumpcloud-ADMU/JumpCloud.ADMU.psd1" -Raw
-          $matches = $content | Select-String -Pattern "ModuleVersion.*([0-9]+.[0-9]+.[0-9])"
-          $version = $matches.matches.groups[1].value
-          echo "RELEASE_VERSION=$version" >> $env:GITHUB_OUTPUT
-      - name: Sign and Upload
-        uses: ./.github/workflows/sign-common-actions
-        env:
-          RELEASE_VERSION: ${{ steps.admu-version.outputs.RELEASE_VERSION }}
-        with:
-          files: |-
-            jumpcloud-ADMU/Exe/gui_jcadmu.exe
-            jumpcloud-ADMU/Exe/uwp_jcadmu.exe
-          SM_API_KEY: ${{ secrets.SM_V2_API_KEY }}
-          SM_CLIENT_CERT_PASSWORD: ${{ secrets.SM_V2_CLIENT_CERT_PASSWORD }}
-          SM_CLIENT_CERT_FILE_B64: ${{ secrets.SM_V2_CLIENT_CERT_FILE_B64 }}
-          SM_HOST: ${{ secrets.SM_HOST }}
-          region: ${{ secrets.AWS_REGION }}
-          version: ${{ env.RELEASE_VERSION }}
       - name: Upload Release Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: jumpcloud-admu
           path: |
-            ${{ github.workspace }}/Jumpcloud-ADMU/Exe/*.exe
             ${{ github.workspace }}/Jumpcloud-ADMU/JumpCloud.ADMU.nuspec
             ${{ github.workspace }}/JumpCloud.ADMU.*.nupkg
   Draft-GH-Release:
@@ -191,11 +158,21 @@ jobs:
           BODY="$TITLE $CHANGELOG"
           # draft release
           (gh release view $TAG && echo "Release exists for $TAG") || gh release create $TAG --title "$TITLE" --notes "$BODY" --draft
-          # upload signed artifacts
-          ls -la ${{ github.workspace }}/jumpcloud-ADMU/Exe/
-          gh release upload $TAG ${{ github.workspace }}/jumpcloud-ADMU/Exe/gui_jcadmu.exe ${{ github.workspace }}/jumpcloud-ADMU/Exe/uwp_jcadmu.exe
+          echo "RELEASE_TAG=$TAG" >> $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  Trigger-Repository-Dispatch:
+    needs: ["Draft-GH-Release"]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dispatch Private Repository Build (API)
+        run: |
+          curl -X POST \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.DISPATCH_GH_TOKEN }}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/TheJumpCloud/jumpcloud-ADMU-signing/dispatches \
+              -d '{"event_type": "create-tag", "client_payload": {"release_tag": "'"${{ env.RELEASE_TAG }}"'"}}'
   Manual-Approval-Release:
     needs: ["Draft-GH-Release"]
     environment: PublishToPSGallery
