--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ JumpCloud.ADMU.nuspec
 Deploy/ADMU.ps1
 Deploy/admuTemplate.ps1
 *.exe
+
+# do not include the remote migration script CSVs
+jcdiscovery.csv
