run CI on pr to 'v*.*.*' branches

--- a/.github/workflows/admu-ci.yml
+++ b/.github/workflows/admu-ci.yml
@@ -3,7 +3,13 @@ on:
   pull_request:
     branches:
       - master
-    types: [opened, synchronize, reopened, labeled, unlabeled]
+      - "v*.*.*"
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - labeled
+      - unlabeled
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
